chart/templates/docker-registry-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -c
    kompose.version: 1.26.1 (a9d05d509)
  creationTimestamp: null
  labels:
    io.kompose.service: docker-registry
  name: docker-registry
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: docker-registry
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -c
        kompose.version: 1.26.1 (a9d05d509)
      creationTimestamp: null
      labels:
        io.kompose.network/batforce: "true"
        io.kompose.service: docker-registry
    spec:
      containers:
        - env:
            - name: REGISTRY_STORAGE_FILESYSTEM_ROOTDIRECTORY
              value: /data
          image: registry:2.8.1
          name: docker-registry
          ports:
            - containerPort: 5000
          resources: {}
          volumeMounts:
            - mountPath: /data
              name: batforce-registry
          securityContext:
            privileged: true                   
      restartPolicy: Always
      volumes:
        - name: batforce-registry
          persistentVolumeClaim:
            claimName: batforce-registry
status: {}
