chart/templates/localstack-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -c
    kompose.version: 1.26.1 (a9d05d509)
  creationTimestamp: null
  labels:
    io.kompose.service: localstack
  name: localstack
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: localstack
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -c
        kompose.version: 1.26.1 (a9d05d509)
      creationTimestamp: null
      labels:
        io.kompose.network/batforce: "true"
        io.kompose.service: localstack
    spec:
      containers:
        - env:
            - name: DATA_DIR
            - name: DEBUG
            - name: DOCKER_HOST
              value: unix:///var/run/docker.sock
            - name: HOST_TMP_FOLDER
              value: /var/folders/6v/33586_0970ncvpvvn4r1y7640000gn/T/localstack
            - name: LAMBDA_EXECUTOR
            - name: LOCALSTACK_API_KEY
          image: localstack/localstack
          name: localstack
          ports:
            - containerPort: 4510
            - containerPort: 4511
            - containerPort: 4512
            - containerPort: 4513
            - containerPort: 4514
            - containerPort: 4515
            - containerPort: 4516
            - containerPort: 4517
            - containerPort: 4518
            - containerPort: 4519
            - containerPort: 4520
            - containerPort: 4521
            - containerPort: 4522
            - containerPort: 4523
            - containerPort: 4524
            - containerPort: 4525
            - containerPort: 4526
            - containerPort: 4527
            - containerPort: 4528
            - containerPort: 4529
            - containerPort: 4530
            - containerPort: 4531
            - containerPort: 4532
            - containerPort: 4533
            - containerPort: 4534
            - containerPort: 4535
            - containerPort: 4536
            - containerPort: 4537
            - containerPort: 4538
            - containerPort: 4539
            - containerPort: 4540
            - containerPort: 4541
            - containerPort: 4542
            - containerPort: 4543
            - containerPort: 4544
            - containerPort: 4545
            - containerPort: 4546
            - containerPort: 4547
            - containerPort: 4548
            - containerPort: 4549
            - containerPort: 4550
            - containerPort: 4551
            - containerPort: 4552
            - containerPort: 4553
            - containerPort: 4554
            - containerPort: 4555
            - containerPort: 4556
            - containerPort: 4557
            - containerPort: 4558
            - containerPort: 4559
            - containerPort: 4566
          resources: {}
      restartPolicy: Always
status: {}
