chart/templates/docker-registry-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -c
    kompose.version: 1.26.1 (a9d05d509)
  creationTimestamp: null
  labels:
    io.kompose.service: docker-registry
  name: docker-registry
spec:
  ports:
    - name: "5006"
      port: 5006
      targetPort: 5000
  selector:
    io.kompose.service: docker-registry
status:
  loadBalancer: {}
