chart/templates/docker-registry-viewer-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -c
    kompose.version: 1.26.1 (a9d05d509)
  creationTimestamp: null
  labels:
    io.kompose.service: docker-registry-viewer
  name: docker-registry-viewer
spec:
  ports:
    - name: "5005"
      port: 5005
      targetPort: 8080
  selector:
    io.kompose.service: docker-registry-viewer
status:
  loadBalancer: {}
