chart/templates/batforce-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  creationTimestamp: null
  name: batforce
spec:
  ingress:
    - from:
        - podSelector:
            matchLabels:
              io.kompose.network/batforce: "true"
  podSelector:
    matchLabels:
      io.kompose.network/batforce: "true"
